and Add BaseActivity
Signed-off-by: Sun <yinglong.sun@hpe.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".BaseActivity"></activity>
         <activity android:name=".RegisterAcitvity"></activity>
         <activity android:name=".PersonAcitvity"></activity>
         <activity android:name=".TaskDownloadActivity"></activity>
-
+        <activity android:name=".BlueToothFolder"></activity>
         <service android:name="com.dxc.mycollector.taskDownload.DownLoadService" />
     </application>
 
